--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ButterSSC</string>
+    <string name="app_name">时时彩专家宝典</string>
     <string name="title_home">开奖趋势</string>
     <string name="title_dashboard">新闻</string>
     <string name="title_notifications">实时开奖</string>
