--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">时时彩专家宝典</string>
+    <string name="app_name">快三专业分析</string>
     <string name="title_home">开奖趋势</string>
     <string name="title_dashboard">新闻</string>
     <string name="title_notifications">实时开奖</string>
@@ -91,5 +91,5 @@
     <string name="error_invalid_password">密码过短</string>
     <string name="error_incorrect_password">密码错误</string>
     <string name="error_field_required">必填 </string>
-    <string name="permission_rationale">"需要联系人权限"</string>
+    <string name="permission_rationale">"需要联系人权限，可略过"</string>
 </resources>
